--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 	
 </head>
 <body>
-	<div class="title">
+	<div class="centre">
 		<h1>5587 Titan Robotics</h1>
 		<h2>Alexandria, VA</h2><br>
 	</div>
 
 	<img src="assets/blackHole.jpg" alt="black hole" height="320">
-	<video controls height="320">
-		<source src="assets/spaceXlanding.mp4" type="video/mp4">
-		Space X Landing
-	</video><br>
+
+	<div class="centre">
+		<video controls height="320">
+			<source src="assets/spaceXlanding.mp4" type="video/mp4">
+			Space X Landing
+		</video><br>
+	</div>
 	<a href="http://firstinspires.org" target="_blank"> Learn more about FIRST!</a><br>
 	<div class="highlightText">
 			<p>Titan Robotics is cool we give people snacks</p>
