fixed more things

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 </head>
 <body>
-	<div class="centre">
+	<div class="title">
 		<h1>5587 Titan Robotics</h1>
 		<h2>Alexandria, VA</h2><br>
 	</div>
