--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 		Space X Landing
 	</video><br>
 	<a href="http://firstinspires.org" target="_blank"> Learn more about FIRST!</a><br>
-	<div class="highlightText">
-			<p>Titan Robotics is cool we give people snacks</p>
+
+	<div class="title">
+		<div class="highlightText">
+				<p>Titan Robotics is cool we give people snacks</p>
+		</div>
 	</div>
 </body>
 </html>
